raylib/raylib.odin


    @(link_name="DrawCubeTexture")
    draw_cube_texture :: proc(
        texture : Texture2D,
        position : Vector3,
        width : _c.float,
        height : _c.float,
        length : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawSphere")
    draw_sphere :: proc(
        center_pos : Vector3,
        radius : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawSphereEx")
    draw_sphere_ex :: proc(
        center_pos : Vector3,
        radius : _c.float,
        rings : _c.int,
        slices : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawSphereWires")
    draw_sphere_wires :: proc(
        center_pos : Vector3,
        radius : _c.float,
        rings : _c.int,
        slices : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawCylinder")
    draw_cylinder :: proc(
        position : Vector3,
        radius_top : _c.float,
        radius_bottom : _c.float,
        height : _c.float,
        slices : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawCylinderWires")
    draw_cylinder_wires :: proc(
        position : Vector3,
        radius_top : _c.float,
        radius_bottom : _c.float,
        height : _c.float,
        slices : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawPlane")
    draw_plane :: proc(
        center_pos : Vector3,
        size : Vector2,
        color : Color
    ) ---;

    @(link_name="DrawRay")
    draw_ray :: proc(
        ray : Ray,
        color : Color
    ) ---;

    @(link_name="DrawGrid")
    draw_grid :: proc(
        slices : _c.int,
        spacing : _c.float
    ) ---;

    @(link_name="DrawGizmo")
    draw_gizmo :: proc(position : Vector3) ---;

    @(link_name="LoadModel")
    load_model :: proc(file_name : cstring) -> Model ---;

    @(link_name="LoadModelFromMesh")
    load_model_from_mesh :: proc(mesh : Mesh) -> Model ---;

    @(link_name="UnloadModel")
    unload_model :: proc(model : Model) ---;

    @(link_name="LoadMesh")
    load_mesh :: proc(file_name : cstring) -> Mesh ---;

    @(link_name="UnloadMesh")
    unload_mesh :: proc(mesh : ^Mesh) ---;

    @(link_name="ExportMesh")
    export_mesh :: proc(
        mesh : Mesh,
        file_name : cstring
    ) ---;

    @(link_name="MeshBoundingBox")
    mesh_bounding_box :: proc(mesh : Mesh) -> BoundingBox ---;

    @(link_name="MeshTangents")
    mesh_tangents :: proc(mesh : ^Mesh) ---;

    @(link_name="MeshBinormals")
    mesh_binormals :: proc(mesh : ^Mesh) ---;

    @(link_name="GenMeshPoly")
    gen_mesh_poly :: proc(
        sides : _c.int,
        radius : _c.float
    ) -> Mesh ---;

    @(link_name="GenMeshPlane")
    gen_mesh_plane :: proc(
        width : _c.float,
        length : _c.float,
        res_x : _c.int,
        res_z : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshCube")
    gen_mesh_cube :: proc(
        width : _c.float,
        height : _c.float,
        length : _c.float
    ) -> Mesh ---;

    @(link_name="GenMeshSphere")
    gen_mesh_sphere :: proc(
        radius : _c.float,
        rings : _c.int,
        slices : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshHemiSphere")
    gen_mesh_hemi_sphere :: proc(
        radius : _c.float,
        rings : _c.int,
        slices : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshCylinder")
    gen_mesh_cylinder :: proc(
        radius : _c.float,
        height : _c.float,
        slices : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshTorus")
    gen_mesh_torus :: proc(
        radius : _c.float,
        size : _c.float,
        rad_seg : _c.int,
        sides : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshKnot")
    gen_mesh_knot :: proc(
        radius : _c.float,
        size : _c.float,
        rad_seg : _c.int,
        sides : _c.int
    ) -> Mesh ---;

    @(link_name="GenMeshHeightmap")
    gen_mesh_heightmap :: proc(
        heightmap : Image,
        size : Vector3
    ) -> Mesh ---;

    @(link_name="GenMeshCubicmap")
    gen_mesh_cubicmap :: proc(
        cubicmap : Image,
        cube_size : Vector3
    ) -> Mesh ---;

    @(link_name="LoadMaterial")
    load_material :: proc(file_name : cstring) -> Material ---;

    @(link_name="LoadMaterialDefault")
    load_material_default :: proc() -> Material ---;

    @(link_name="UnloadMaterial")
    unload_material :: proc(material : Material) ---;

    @(link_name="DrawModel")
    draw_model :: proc(
        model : Model,
        position : Vector3,
        scale : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawModelEx")
    draw_model_ex :: proc(
        model : Model,
        position : Vector3,
        rotation_axis : Vector3,
        rotation_angle : _c.float,
        scale : Vector3,
        tint : Color
    ) ---;

    @(link_name="DrawModelWires")
    draw_model_wires :: proc(
        model : Model,
        position : Vector3,
        scale : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawModelWiresEx")
    draw_model_wires_ex :: proc(
        model : Model,
        position : Vector3,
        rotation_axis : Vector3,
        rotation_angle : _c.float,
        scale : Vector3,
        tint : Color
    ) ---;

    @(link_name="DrawBoundingBox")
    draw_bounding_box :: proc(
        box : BoundingBox,
        color : Color
    ) ---;

    @(link_name="DrawBillboard")
    draw_billboard :: proc(
        camera : Camera,
        texture : Texture2D,
        center : Vector3,
        size : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawBillboardRec")
    draw_billboard_rec :: proc(
        camera : Camera,
        texture : Texture2D,
        source_rec : Rectangle,
        center : Vector3,
        size : _c.float,
        tint : Color
    ) ---;

    @(link_name="CheckCollisionSpheres")
    check_collision_spheres :: proc(
        center_a : Vector3,
        radius_a : _c.float,
        center_b : Vector3,
        radius_b : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionBoxes")
    check_collision_boxes :: proc(
        box1 : BoundingBox,
        box2 : BoundingBox
    ) -> bool ---;

    @(link_name="CheckCollisionBoxSphere")
    check_collision_box_sphere :: proc(
        box : BoundingBox,
        center_sphere : Vector3,
        radius_sphere : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionRaySphere")
    check_collision_ray_sphere :: proc(
        ray : Ray,
        sphere_position : Vector3,
        sphere_radius : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionRaySphereEx")
    check_collision_ray_sphere_ex :: proc(
        ray : Ray,
        sphere_position : Vector3,
        sphere_radius : _c.float,
        collision_point : ^Vector3
    ) -> bool ---;

    @(link_name="CheckCollisionRayBox")
    check_collision_ray_box :: proc(
        ray : Ray,
        box : BoundingBox
    ) -> bool ---;

    @(link_name="GetCollisionRayModel")
    get_collision_ray_model :: proc(
        ray : Ray,
        model : ^Model
    ) -> RayHitInfo ---;

    @(link_name="GetCollisionRayTriangle")
    get_collision_ray_triangle :: proc(
        ray : Ray,
        p1 : Vector3,
        p2 : Vector3,
        p3 : Vector3
    ) -> RayHitInfo ---;

    @(link_name="GetCollisionRayGround")
    get_collision_ray_ground :: proc(
        ray : Ray,
        ground_height : _c.float
    ) -> RayHitInfo ---;

    @(link_name="LoadText")
    load_text :: proc(file_name : cstring) -> cstring ---;

    @(link_name="LoadShader")
    load_shader :: proc(
        vs_file_name : cstring,
        fs_file_name : cstring
    ) -> Shader ---;

    @(link_name="LoadShaderCode")
    load_shader_code :: proc(
        vs_code : cstring,
        fs_code : cstring
    ) -> Shader ---;

    @(link_name="UnloadShader")
    unload_shader :: proc(shader : Shader) ---;

    @(link_name="GetShaderDefault")
    get_shader_default :: proc() -> Shader ---;

    @(link_name="GetTextureDefault")
    get_texture_default :: proc() -> Texture2D ---;

    @(link_name="GetShaderLocation")
    get_shader_location :: proc(
        shader : Shader,
        uniform_name : cstring
    ) -> _c.int ---;

    @(link_name="SetShaderValue")
    set_shader_value :: proc(
        shader : Shader,
        uniform_loc : _c.int,
        value : rawptr,
        uniform_type : _c.int
    ) ---;

    @(link_name="SetShaderValueV")
    set_shader_value_v :: proc(
        shader : Shader,
        uniform_loc : _c.int,
        value : rawptr,
        uniform_type : _c.int,
        count : _c.int
    ) ---;

    @(link_name="SetShaderValueMatrix")
    set_shader_value_matrix :: proc(
        shader : Shader,
        uniform_loc : _c.int,
        mat : Matrix
    ) ---;

    @(link_name="SetMatrixProjection")
    set_matrix_projection :: proc(proj : Matrix) ---;

    @(link_name="SetMatrixModelview")
    set_matrix_modelview :: proc(view : Matrix) ---;

    @(link_name="GetMatrixModelview")
    get_matrix_modelview :: proc() -> Matrix ---;

    @(link_name="GenTextureCubemap")
    gen_texture_cubemap :: proc(
        shader : Shader,
        sky_hdr : Texture2D,
        size : _c.int
    ) -> Texture2D ---;

    @(link_name="GenTextureIrradiance")
    gen_texture_irradiance :: proc(
        shader : Shader,
        cubemap : Texture2D,
        size : _c.int
    ) -> Texture2D ---;

    @(link_name="GenTexturePrefilter")
    gen_texture_prefilter :: proc(
        shader : Shader,
        cubemap : Texture2D,
        size : _c.int
    ) -> Texture2D ---;

    @(link_name="GenTextureBRDF")
    gen_texture_brdf :: proc(
        shader : Shader,
        size : _c.int
    ) -> Texture2D ---;

    @(link_name="BeginShaderMode")
    begin_shader_mode :: proc(shader : Shader) ---;

    @(link_name="EndShaderMode")
    end_shader_mode :: proc() ---;

    @(link_name="BeginBlendMode")
    begin_blend_mode :: proc(mode : _c.int) ---;

    @(link_name="EndBlendMode")
    end_blend_mode :: proc() ---;

    @(link_name="BeginScissorMode")
    begin_scissor_mode :: proc(
        x : _c.int,
        y : _c.int,
        width : _c.int,
        height : _c.int
    ) ---;

    @(link_name="EndScissorMode")
    end_scissor_mode :: proc() ---;

    @(link_name="GetVrDeviceInfo")
    get_vr_device_info :: proc(vr_device_type : _c.int) -> VrDeviceInfo ---;

    @(link_name="InitVrSimulator")
    init_vr_simulator :: proc(info : VrDeviceInfo) ---;

    @(link_name="UpdateVrTracking")
    update_vr_tracking :: proc(camera : ^Camera) ---;

    @(link_name="CloseVrSimulator")
    close_vr_simulator :: proc() ---;

    @(link_name="IsVrSimulatorReady")
    is_vr_simulator_ready :: proc() -> bool ---;

    @(link_name="ToggleVrMode")
    toggle_vr_mode :: proc() ---;

    @(link_name="BeginVrDrawing")
    begin_vr_drawing :: proc() ---;

    @(link_name="EndVrDrawing")
    end_vr_drawing :: proc() ---;

    @(link_name="InitAudioDevice")
    init_audio_device :: proc() ---;

    @(link_name="CloseAudioDevice")
    close_audio_device :: proc() ---;

    @(link_name="IsAudioDeviceReady")
    is_audio_device_ready :: proc() -> bool ---;

    @(link_name="SetMasterVolume")
    set_master_volume :: proc(volume : _c.float) ---;

    @(link_name="LoadWave")
    load_wave :: proc(file_name : cstring) -> Wave ---;

    @(link_name="LoadWaveEx")
    load_wave_ex :: proc(
        data : rawptr,
        sample_count : _c.int,
        sample_rate : _c.int,
        sample_size : _c.int,
        channels : _c.int
    ) -> Wave ---;

    @(link_name="LoadSound")
    load_sound :: proc(file_name : cstring) -> Sound ---;

    @(link_name="LoadSoundFromWave")
    load_sound_from_wave :: proc(wave : Wave) -> Sound ---;

    @(link_name="UpdateSound")
    update_sound :: proc(
        sound : Sound,
        data : rawptr,
        samples_count : _c.int
    ) ---;

    @(link_name="UnloadWave")
    unload_wave :: proc(wave : Wave) ---;

    @(link_name="UnloadSound")
    unload_sound :: proc(sound : Sound) ---;
